ydc_develop/force-app/main/default/objects/BI__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <inlineHelpText>Password to login to the Tableau Server</inlineHelpText>
    <label>Password</label>
    <length>40</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>