ydc_develop/force-app/main/default/objects/BI__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <inlineHelpText>Coma separated list of sites</inlineHelpText>
    <label>Site</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>