ydc_develop/force-app/main/default/objects/BI__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>