ydc_develop/force-app/main/default/objects/BI__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <inlineHelpText>Username to login to Tableau Server</inlineHelpText>
    <label>Username</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>